--- a/score.html
+++ b/score.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Scoreboard</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
 </head>
 
 <body>
@@ -38,34 +39,80 @@
   </nav>
 <!--FIM NAVBAR-->
 
-<p>Scoreboard</p>
-<table> <tr> 
-    <th>Nome do Jogador:</th>
-     <th>Nº de pontos:</th> 
-     <th>Tempo passado:</th> 
-    </tr> 
-    <tr> 
-        <td>Jogador 1</td>
-        <td> 999</td> 
-        <td>160 segundos</td> 
-    </tr> 
-    <tr> 
-        <td>Jogador 2</td> 
-        <td> 888</td>
-        <td>1600 segundos</td>
-    </tr> 
-    <tr>
-        <td>Jogador 3</td> 
-        <td> 777</td>
-        <td>6000 segundos</td> 
-    </tr> 
-    <tr> 
-        <td>Jogador 4</td>
-        <td> 666</td>
-        <td>3333333 segundos</td> 
 
-    </tr>
-</table>
+<div class="scoreboard">
+    <h2>Top 10 Melhores Scores</h2>
+    <br><br>
+    <ul class="responsive-table">
+      <li class="table-header">
+        <div class="col col-1">Nome</div>
+        <div class="col col-2">Score</div>
+        <div class="col col-3">Tempo</div>
+        <div class="col col-4">Data</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Ronaldo</div>
+        <div class="col col-2" >12345</div>
+        <div class="col col-3" >1:42:42</div>
+        <div class="col col-4" >7/6/2022 14:41</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Newton</div>
+        <div class="col col-2" >1234</div>
+        <div class="col col-3" >1:45:42</div>
+        <div class="col col-4" >4/6/2022 18:40</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Rafael</div>
+        <div class="col col-2" >123</div>
+        <div class="col col-3" >2:02:42</div>
+        <div class="col col-4" >1/1/2022 11:42</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Donatelo</div>
+        <div class="col col-2" >12</div>
+        <div class="col col-3" >2:22:42</div>
+        <div class="col col-4" >7/4/2022 12:42</div>
+      </li>
+    
+      <li class="table-row">
+        <div class="col col-1" >Ronaldo</div>
+        <div class="col col-2" >12345</div>
+        <div class="col col-3" >1:42:42</div>
+        <div class="col col-4" >7/6/2022 14:41</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Newton</div>
+        <div class="col col-2" >1234</div>
+        <div class="col col-3" >1:45:42</div>
+        <div class="col col-4" >4/6/2022 18:40</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Rafael</div>
+        <div class="col col-2" >123</div>
+        <div class="col col-3" >2:02:42</div>
+        <div class="col col-4" >1/1/2022 11:42</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Donatelo</div>
+        <div class="col col-2" >12</div>
+        <div class="col col-3" >2:22:42</div>
+        <div class="col col-4" >7/4/2022 12:42</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Rafael</div>
+        <div class="col col-2" >123</div>
+        <div class="col col-3" >2:02:42</div>
+        <div class="col col-4" >1/1/2022 11:42</div>
+      </li>
+      <li class="table-row">
+        <div class="col col-1" >Donatelo</div>
+        <div class="col col-2" >12</div>
+        <div class="col col-3" >2:22:42</div>
+        <div class="col col-4" >7/4/2022 12:42</div>
+      </li>
+    </ul>
+  </div>
 </div>
 </body>
 
