added style-test.css and fontStyles.css and infoPage.css started to organize thingies NECESSÁRIO FAZER O FOOTER E TORNAR WEB RESPONSIVE AS PAGINAS

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
    
     <head>
         <link rel="stylesheet" type="text/css" href="./css/navBar.css">
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/style-test.css">
+        <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+
         <meta charset="UTF-8">
         <title>Página Inicial</title>
         
         
         </head>
-    <body><!--NavBar Tutorial: https: //www.makeuseof.com/responsive-navigation-bar-using-html-and-css/
-    -->
+
+    <body>
+
+    <!--NavBar Tutorial: https: //www.makeuseof.com/responsive-navigation-bar-using-html-and-css/-->
     <div class="container">
         <nav class="navbar">
             <ul class="nav-links">
@@ -29,63 +33,32 @@
                         <ul class="dropdown">
                             <li><a href="./SPlayer.html">Singleplayer</a></li>
                             <li><a href="./Mplayer.html">Multiplayer</a></li>
-                            <!--<li><a href="/">Dropdown 2</a></li>
-                            <li><a href="/">Dropdown 3</a></li>
-                            <li><a href="/">Dropdown 4</a></li> -->
-                          </ul>
-                      </li>
-                      <li><a href="login.html">Login</a></li>
-                  </div>
-              </ul>
-          </nav>
-<br>
-      <h1> Bem-vindo! </h1><br>
-      <div class = "quote">
-              <blockquote>
-                  <p> Admit it. None of us know how to play Minesweeper.
-                      We just click randoms boxes and hope for the best.</p>
-              </blockquote>
-
-      </div><br><br>
-      <p> Nesta página vais encontrar as <a style="color: #00ADB5;" href="./info.html">regras</a> de como jogar Minesweeper! </p>
-      <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p><br>
-      <p> Do que estás à espera?? </p><br>
-      <!--Botão para jogar -->
-    <div style="text-align:center">
-        <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
-    </div><br>
-
-    <!--
-    <div class="gallery">
-        <a target="_blank" href="https://64.media.tumblr.com/3fc0534025a90092e3e0748f131ffe2d/1206b76caf3118b7-7f/s540x810/2989b54570df31793a00f82937323705c6618080.jpg">
-            <img src = "https://64.media.tumblr.com/3fc0534025a90092e3e0748f131ffe2d/1206b76caf3118b7-7f/s540x810/2989b54570df31793a00f82937323705c6618080.jpg"
-                 alt = "Meme de Minesweepwer 1"
-                 height="320">
-        </a>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="./media/Meme2.jpg">
-            <img src = "./media/Meme2.jpg"
-                 alt = "Meme de Minesweepwer 2"
-                 height="300">
-        </a>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="./media/Meme3.jpg">
-            <img src = "./media/Meme3.jpg"
-                 alt = "Meme de Minesweepwer 3"
-                 height="300">
-        </a>
-    </div><div class="gallery">
-        <a target="_blank" href="./media/Meme4.jpg">
-            <img src = "./media/Meme4.jpg"
-                 alt = "Meme de Minesweepwer 4"
-                 height="300">
-        </a>
-    </div>
--->
+                        </ul>
+                    </li>
+                    <li><a href="login.html">Login</a></li>
+                </div>
+            </ul>
+        </nav>
 
 
+        <br>
+        <h1> Bem-vindo! </h1><br>
+        <div class = "quote">
+                <p> Admit it. None of us know how to play Minesweeper.
+                    We just click randoms boxes and hope for the best.</p>
+        </div>
+        <br>
+        <div>
+            <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
+            <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p><br>
+            <p> Do que estás à espera?? </p>
+        </div>
+        <br>
+        <!--Botão para jogar -->
+        <div class="button">
+            <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
+        </div>
+        <br>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GrZCWx0fnfc"
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
