--- a/info.html
+++ b/info.html
@@ -3,8 +3,11 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
+    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
+    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
+    <link rel="stylesheet" type="text/css" href="./css/infoPage.css">
 
     <meta charset="UTF-8">
     <title>Informações</title>
@@ -12,103 +15,111 @@
 </head>
 
 <body>
-<div class="container">
-    <!--NAVBAR-->
-    <nav class="navbar">
-        <ul class="nav-links">
-            <!-- Para o móvel -->
-            <input type="checkbox" id="checkbox_toggle" />
-            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-            <!--Items-->
-            <div class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="info.html">Info</a></li>
-                <!--  <li><a href="jogo.html">Jogo</a></li>-->
-                <li><a href="score.html">Scoreboard</a></li>
-                <li class="services">
-                    <!-- DROPDOWN EXEMPLO -->
-                    <a href="./jogo.html">Jogo</a>
-                    <ul class="dropdown">
-                        <li><a href="./SPlayer.html">Singleplayer</a></li>
-                        <li><a href="./Mplayer.html">Multiplayer</a></li>
-                        <!--<li><a href="/">Dropdown 2</a></li>
-                        <li><a href="/">Dropdown 3</a></li>
-                        <li><a href="/">Dropdown 4</a></li> -->
-                    </ul>
-                </li>
-                <li><a href="login.html">Login</a></li>
-            </div>
-        </ul>
-    </nav>
-    <!--FIM NAVBAR-->
-    <br>
-    <div id="Regras">
-        <h3> <b> Regras: </b> </h3>
-        <p> O tabuleiro é dividido em células, com as minas distribuídas aleatoriamente. Clicar numa célula que não tem nenhuma mina revela um número, este número é a quantidade de células vizinhas que contêm uma mina. Usando essas informações, determina as células que são seguras e as que contêm minas. As células suspeitas de estarem minadas podem ser marcadas com uma bandeira usando o botão direito do rato.</p>
-    </div>
-    <div id="ComoGanhar">
-        <h3> <b> Como ganhar: </b> </h3>
-        <p> Para vencer, tens que abrir todas as células que não contêm minas.</p>
-    </div>
-    <br> 
+    <div class="container">
 
-    <div>
-        <h3> <b> Gameplay Básico: </b> </h3>
-        <p> Quando um número toca no mesmo número de quadrados, esses quadrados são minas. Por exemplo:</p>
+
+        <!--NAVBAR-->
+        <nav class="navbar">
+            <ul class="nav-links">
+                <!-- Para o móvel -->
+                <input type="checkbox" id="checkbox_toggle" />
+                <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                <!--Items-->
+                <div class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="info.html">Info</a></li>
+                    <!--  <li><a href="jogo.html">Jogo</a></li>-->
+                    <li><a href="score.html">Scoreboard</a></li>
+                    <li class="services">
+                        <!-- DROPDOWN EXEMPLO -->
+                        <a href="./jogo.html">Jogo</a>
+                        <ul class="dropdown">
+                            <li><a href="./SPlayer.html">Singleplayer</a></li>
+                            <li><a href="./Mplayer.html">Multiplayer</a></li>
+                            <!--<li><a href="/">Dropdown 2</a></li>
+                            <li><a href="/">Dropdown 3</a></li>
+                            <li><a href="/">Dropdown 4</a></li> -->
+                        </ul>
+                    </li>
+                    <li><a href="login.html">Login</a></li>
+                </div>
+            </ul>
+        </nav>
+        <!--FIM NAVBAR-->
+
         <br>
-        <div class="row">
-            <div class="column">
-              <img src="assets/images/tt1.png" style="width:25%">
-              <br>
-              <a>O 1 toca em 1 quadrado,<br> logo é uma mina.</a>
-            </div>
-            <div class="column">
-              <img src="assets/images/tt2.png" style="width:25%">
-              <br>
-              <a>O 2 toca 2 quadrados, <br> por isso ambos são minas.</a>
-            </div>
-            <div class="column">
-              <img src="assets/images/tt3.png" style="width:25%">
-              <br>
-              <a>O 3 toca 3 quadrados, <br>por isso todos são minas.</a>
-            </div>
-          </div>
-          <br>
-        <p> <b> Padrões:</b> </p>
-        <p> Um padrão é um arranjo comum de números com apenas uma solução. Memorizar padrões é importante porque pensar desperdiça tempo.
+        <div>
+            <h3> <b> Regras: </b> </h3>
+            <p> O tabuleiro é dividido em células, com as minas distribuídas aleatoriamente. </p>
+            <p> Clicar numa célula que não tem nenhuma mina revela um número, este número é a quantidade de células vizinhas que contêm uma mina.</p>
+            <p> Usando essas informações, determina as células que são seguras e as que contêm minas.</p>
+            <p> As células suspeitas de estarem minadas podem ser marcadas com uma bandeira usando o botão direito do rato.</p>
+        </div>
+        <br>
+        <div>
+            <h3> <b> Como ganhar: </b> </h3>
+            <p> Para vencer, tens que abrir todas as células que não contêm minas.</p>
+        </div>
+        <br>
 
-            Os dois padrões mais famosos são 1-2-1 e 1-2-2-1. Devias memorizá-los imediatamente.</p>
-        <br><br>
-
-          <div class="row">
-
-            <div class="column2">
-              <img src="assets/images/tt4.png" style="width:25%">
-              <br>
-              <a>O padrão 1-2-1 têm 1 solução.</a>
+        <div>
+            <h3> <b> Gameplay Básico: </b> </h3>
+            <p> Quando um número toca no mesmo número de quadrados, esses quadrados são minas. Por exemplo:</p>
+            <br>
+            <div class="row">
+                <div class="column">
+                  <img src="assets/images/tt1.png" style="width:25%">
+                  <br>
+                  <p>O 1 toca em 1 quadrado,<br> logo é uma mina.</p>
+                </div>
+                <div class="column">
+                  <img src="assets/images/tt2.png" style="width:25%">
+                  <br>
+                  <p>O 2 toca 2 quadrados, <br> por isso ambos são minas.</p>
+                </div>
+                <div class="column">
+                  <img src="assets/images/tt3.png" style="width:25%">
+                  <br>
+                  <p>O 3 toca 3 quadrados, <br>por isso todos são minas.</p>
+                </div>
             </div>
-            <div class="column2">
-              <img src="assets/images/tt5.png" style="width:25%">
-              <br>
-              <a>O padrão 1-2-2-1 têm 1 solução.</a>
+            <br>
+            <h3> <b> Padrões:</b> </h3>
+            <p> Um padrão é um arranjo comum de números com apenas uma solução.</p>
+            <p> Memorizar padrões é importante porque pensar desperdiça tempo.</p>
+            <p>Os dois padrões mais famosos são 1-2-1 e 1-2-2-1. Devias memorizá-los imediatamente.</p>
+            <br>
+            <br>
+
+              <div class="row">
+                  <div class="column2">
+                      <img src="assets/images/tt4.png" style="width:25%">
+                      <br>
+                      <p>O padrão 1-2-1 têm 1 solução.</p>
+                  </div>
+                  <div class="column2">
+                      <img src="assets/images/tt5.png" style="width:25%">
+                      <br>
+                      <p>O padrão 1-2-2-1 têm 1 solução.</p>
+                  </div>
+              </div>
+
+
+        <br>
+
+
+            <p> Estás pronto? </p>
+
+        </div>
+        <br>
+            <!--Botão para jogar -->
+            <div class ="button">
+                <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
             </div>
-          </div>
+
+
+
     </div>
-    
-     
-
-    <p> Estás pronto? </p>
-    <br>
-    <!--Botão para jogar -->
-    <div style="text-align:center">
-        <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
-    </div>
-
-    <!--<audio controls>
-        <source src="assets/audio/01. BG Cave.mp3" type="audio/mpeg">
-    </audio>-->
-
-</div>      
 </body>
 
 </html>
