--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/login.css">
+    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
+
 </head>
 
 <body>
@@ -48,28 +50,14 @@
             <br> <br> <br> 
             <p ><a href="forgot.html">Esqueceste-te da Password?</a> </p>
             <br> <br>  
-            <p >
-               <a style="color: black;" >  Ainda não tens uma conta?  </a><br>
+            <p id="Registo">
+                Ainda não tens uma conta?<br>
                 <a href="registar.html"> Registar </a>
             </p>
             <br>
         </form>
     </div>
 
-    <!--
-    <div id="coisadelogin">
-        <label for="Username">Username:
-        </label>
-        <input type="text" id="username" name="username">
-    </div>
-    <div id="coisadelogin2">
-        <label for="pass">Palavra-Passe (mínimo 6 caracteres): 
-        </label>
-        <input type="password" id="pass" name="password" minlength="6" required>
-    </div>
-    <p> <a href="newUser.html"> Criar Conta </a> </p>
-    <p> <a href="jogo.html"> Jogar </a> </p>
-    <input type="submit" value="Entrar">-->
 
 </div>
 </body>
