--- a/score.html
+++ b/score.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Scoreboard</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
+    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
 
 
 </head>
@@ -31,9 +32,7 @@
                   <ul class="dropdown">
                       <li><a href="./SPlayer.html">Singleplayer</a></li>
                       <li><a href="./Mplayer.html">Multiplayer</a></li>
-                      <!--<li><a href="/">Dropdown 2</a></li>
-                      <li><a href="/">Dropdown 3</a></li>
-                      <li><a href="/">Dropdown 4</a></li> -->
+
                   </ul>
               </li>
               <li><a href="login.html">Login</a></li>
@@ -42,34 +41,45 @@
   </nav>
 <!--FIM NAVBAR-->
 
-<p>Scoreboard</p>
-<table> <tr> 
-    <th>Nome do Jogador:</th>
-     <th>Nº de pontos:</th> 
-     <th>Tempo passado:</th> 
-    </tr> 
-    <tr> 
-        <td>Jogador 1</td>
-        <td> 999</td> 
-        <td>160 segundos</td> 
-    </tr> 
-    <tr> 
-        <td>Jogador 2</td> 
-        <td> 888</td>
-        <td>1600 segundos</td>
-    </tr> 
-    <tr>
-        <td>Jogador 3</td> 
-        <td> 777</td>
-        <td>6000 segundos</td> 
-    </tr> 
-    <tr> 
-        <td>Jogador 4</td>
-        <td> 666</td>
-        <td>3333333 segundos</td> 
-
-    </tr>
-</table>
+<h1>Scoreboard</h1>
+    <div>
+        <table>
+            <colgroup>
+                <col class = "nomeJogador">
+                <col class = "nrPontos">
+                <col class = "tempoPassado"
+            </colgroup>
+            <thead>
+                <tr>
+                    <th>Nome do Jogador:</th>
+                    <th>Nº de pontos:</th>
+                    <th>Tempo passado:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Jogador 1</td>
+                    <td> 999</td>
+                    <td>160 segundos</td>
+                </tr>
+                <tr>
+                    <td>Jogador 2</td>
+                    <td> 888</td>
+                    <td>1600 segundos</td>
+                </tr>
+                <tr>
+                    <td>Jogador 3</td>
+                    <td> 777</td>
+                    <td>6000 segundos</td>
+                </tr>
+                <tr>
+                    <td>Jogador 4</td>
+                    <td> 666</td>
+                    <td>3333333 segundos</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 
