--- a/jogo.html
+++ b/jogo.html
@@ -118,6 +118,8 @@
 
     </div>
 </div>
+<button type="button"> <a href = "SPlayer.html"> Single Player</a> </button>
+<button type="button"> <a href = "Mplayer.html"> Multiplayer</a> </button>
 </body>
 
 </html>
