--- a/jogo.html
+++ b/jogo.html
@@ -118,8 +118,10 @@
 
     </div>
 </div>
+<div id = "butoes">
 <button type="button"> <a href = "SPlayer.html"> Single Player</a> </button>
 <button type="button"> <a href = "Mplayer.html"> Multiplayer</a> </button>
+</div>
 </body>
 
 </html>
