--- a/SPlayer.html
+++ b/SPlayer.html
@@ -30,22 +30,19 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="info.html">Info</a></li>
                     <!--  <li><a href="jogo.html">Jogo</a></li>-->
-                    <li><a href="score.html">Scoreboard</a></li>
+                    <li><a href="jogo.html">Jogo</a></li>
                     <li class="services">
                         <!-- DROPDOWN EXEMPLO -->
-                        <a href="./jogo.html">Jogo</a>
+                        <p> Score</p>
                         <ul class="dropdown">
-                            <li><a href="./SPlayer.html">Singleplayer</a></li>
-                            <li><a href="./Mplayer.html">Multiplayer</a></li>
-                            <!--<li><a href="/">Dropdown 2</a></li>
-                            <li><a href="/">Dropdown 3</a></li>
-                            <li><a href="/">Dropdown 4</a></li> -->
-                          </ul>
-                      </li>
-                      <li><a href="login.html">Login</a></li>
-                  </div>
-              </ul>
-          </nav>
+                            <li><a href="./score.html">Geral</a></li>
+                            <li><a href="./scoreindivid.html">Individual</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="login.html">Login</a></li>
+                </div>
+            </ul>
+        </nav>
 
         <div class="grid-container">
             <div class="grid-item">1</div>
