--- a/jogo.html
+++ b/jogo.html
@@ -21,16 +21,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="info.html">Info</a></li>
                 <!--  <li><a href="jogo.html">Jogo</a></li>-->
-                <li><a href="score.html">Scoreboard</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
                 <li class="services">
                     <!-- DROPDOWN EXEMPLO -->
-                    <a href="./jogo.html">Jogo</a>
+                    <p> Score</p>
                     <ul class="dropdown">
-                        <li><a href="./SPlayer.html">Singleplayer</a></li>
-                        <li><a href="./Mplayer.html">Multiplayer</a></li>
-                        <!--<li><a href="/">Dropdown 2</a></li>
-                        <li><a href="/">Dropdown 3</a></li>
-                        <li><a href="/">Dropdown 4</a></li> -->
+                        <li><a href="./score.html">Geral</a></li>
+                        <li><a href="./scoreindivid.html">Individual</a></li>
                     </ul>
                 </li>
                 <li><a href="login.html">Login</a></li>
@@ -114,6 +111,16 @@
         </div>
         <div class="label">
             Número de Bombas
+        </div>
+
+    </div>
+
+    <div class="gameButtons">
+        <div class ="button">
+            <button class="button test" onclick="window.location.href='SPlayer.html'"> Single Player</button>
+        </div>
+        <div class ="button">
+            <button class="button test" onclick="window.location.href='Mplayer.html'">Multi Player</button>
         </div>
 
     </div>
