--- a/jogo.html
+++ b/jogo.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Jogo</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
+    <link rel="stylesheet" type="text/css" href="./css/jogo-test.css">
 </head>
 
 <body>
@@ -125,10 +126,7 @@
 
     </div>
 </div>
-<div id = "butoes">
-<button type="button"> <a href = "SPlayer.html"> Single Player</a> </button>
-<button type="button"> <a href = "Mplayer.html"> Multiplayer</a> </button>
-</div>
+
 </body>
 
 </html>
