--- a/score.html
+++ b/score.html
@@ -41,18 +41,21 @@
 <!--FIM NAVBAR-->
 
 <h1>Scoreboard</h1>
-    <div>
-        <table>
+    <div >
+        <table class="scoreboard">
             <colgroup>
                 <col class = "nomeJogador">
                 <col class = "nrPontos">
-                <col class = "tempoPassado"
+                <col class = "tempoPassado">
             </colgroup>
             <thead>
                 <tr>
                     <th>Nome do Jogador:</th>
                     <th>Nº de pontos:</th>
                     <th>Tempo passado:</th>
+                </tr>
+                <tr>
+                    <td colspan = 3> <hr> </td>
                 </tr>
             </thead>
             <tbody>
