--- a/score.html
+++ b/score.html
@@ -41,18 +41,19 @@
 <!--FIM NAVBAR-->
 
 <h1>Scoreboard</h1>
-    <div >
+    <div>
+        <div>
         <table class="scoreboard">
             <colgroup>
-                <col class = "nomeJogador">
-                <col class = "nrPontos">
-                <col class = "tempoPassado">
+                <col class = "nome">
+                <col class = "pontos">
+                <col class = "tempo">
             </colgroup>
             <thead>
                 <tr>
-                    <th>Nome do Jogador:</th>
-                    <th>Nº de pontos:</th>
-                    <th>Tempo passado:</th>
+                    <th>Jogador</th>
+                    <th>Pontos</th>
+                    <th>Tempo</th>
                 </tr>
                 <tr>
                     <td colspan = 3> <hr> </td>
@@ -81,6 +82,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
 </div>
 </body>
