Pagina de Informações

--- a/info.html
+++ b/info.html
@@ -45,6 +45,8 @@
         <!--FIM NAVBAR-->
 
         <br>
+        <h1> Informações </h1>
+        <br>
         <div>
             <h3> <b> Regras: </b> </h3>
             <br>
