--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Scoreboard</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title>Scoreboard Individual</title>
+    <link rel="stylesheet" type="text/css" href="./css/style-test.css">
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
+    <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
 
 
 </head>
 
 <body>
 <div class="container">
-  <!--NAVBAR-->
+    <!--NAVBAR-->
     <nav class="navbar">
         <ul class="nav-links">
             <!-- Para o móvel -->
@@ -37,36 +38,46 @@
             </div>
         </ul>
     </nav>
-<!--FIM NAVBAR-->
+    <!--FIM NAVBAR-->
 
-<p>Scoreboard</p>
-<table> <tr> 
-    <th>Nome do Jogador:</th>
-     <th>Nº de pontos:</th> 
-     <th>Tempo passado:</th> 
-    </tr> 
-    <tr> 
-        <td>Tempo 1</td>
-        <td> 999</td> 
-        <td>160 segundos</td> 
-    </tr> 
-    <tr> 
-        <td>Tempo 2</td> 
-        <td> 888</td>
-        <td>1600 segundos</td>
-    </tr> 
-    <tr>
-        <td>Tempo 3</td> 
-        <td> 777</td>
-        <td>6000 segundos</td> 
-    </tr> 
-    <tr> 
-        <td>Tempo 4</td>
-        <td> 666</td>
-        <td>3333333 segundos</td> 
-
-    </tr>
-</table>
+    <h1>Scoreboard</h1>
+    <div>
+        <div>
+            <table class="scoreboard">
+                <colgroup>
+                    <col class = "pontos">
+                    <col class = "tempo">
+                </colgroup>
+                <thead>
+                <tr>
+                    <th>Pontos</th>
+                    <th>Tempo</th>
+                </tr>
+                <tr>
+                    <td colspan = 2> <hr> </td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td> 999</td>
+                    <td>160 segundos</td>
+                </tr>
+                <tr>
+                    <td> 888</td>
+                    <td>1600 segundos</td>
+                </tr>
+                <tr>
+                    <td> 777</td>
+                    <td>6000 segundos</td>
+                </tr>
+                <tr>
+                    <td> 666</td>
+                    <td>3333333 segundos</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 </body>
 
