--- a/jogo.html
+++ b/jogo.html
@@ -108,7 +108,7 @@
            slider3.max=(slider1.value-1)*(slider2.value-1);
        }
            </script>
-    <div class="SpaceAround">
+    <div class="SpaceAround" style="border-radius: 25px 25px 0 0;">
         <div class="RangeAndLabel">
             <div class="value" id="lbl1">8</div>
             <div class="RangeSlider">
@@ -160,7 +160,7 @@
         </div>
     </div>
 
-    <div class="SpaceAround">
+    <div class="SpaceAround" style="border-radius: 0 0 25px 25px;">
         <!--Centered text div-->
         <div class="label">
             Altura do Campo
@@ -174,7 +174,7 @@
 
     </div>
     <br>  <br>
-    <div class="gameButtons" style="width: 20%;border-radius: 0 0 25px 25px;;" id="DownCornersOnly">
+    <div class="gameButtons" style="width: 20%;" >
         <div class ="button">
             <button class="button test" onclick="window.location.href='SPlayer.html'"> Single Player</button>
         </div>
