--- a/forgot.html
+++ b/forgot.html
@@ -39,7 +39,7 @@
         <div class="LoginBox">
             <p class="Title" style="font-size: 2.4em;">Recuperar <br> Palavra-Pass</p>
             <br>
-            <a style="color: black; text-align: center;">Um E-Mail com o link de redefinição da tua Palavra-Passe vai ser enviado para o teu E-Mail.</a>   
+            <a style="color: black; text-align: center;">Um email com o link de redefinição da tua <br> Palavra-Passe  vai ser enviado para o teu E-Mail.</a>   
             <form class="form1">
 
                 <input class="InputBox" type="text" placeholder="Email">
