--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" type="text/css" href="./css/navBar.css">
         <link rel="stylesheet" type="text/css" href="./css/style-test.css">
         <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
-
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
         <title>Página Inicial</title>
         
@@ -14,7 +15,7 @@
 
     <body>
 
-    <!--NavBar Tutorial: https: //www.makeuseof.com/responsive-navigation-bar-using-html-and-css/-->
+   
     <div class="container">
         <nav class="navbar">
             <ul class="nav-links">
