--- a/Mplayer.html
+++ b/Mplayer.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MultiPlayer</title>
 </head>
-<body><!--NavBar Tutorial: https: //www.makeuseof.com/responsive-navigation-bar-using-html-and-css/-->
+<body>
 <div class = "container">
     <nav class="navbar">
         <ul class="nav-links">
