--- a/info.html
+++ b/info.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
     <link rel="stylesheet" type="text/css" href="./css/style-test.css">
     <link rel="stylesheet" type="text/css" href="./css/infoPage.css">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
     <title>Informações</title>
 
