--- a/jogo.html
+++ b/jogo.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <link rel="stylesheet" type="text/css" href="./css/jogo-test.css">
     <link rel="stylesheet" type="text/css" href="./css/jogo.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
