--- a/scoreindivid.html
+++ b/scoreindivid.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="./css/scoreboard.css">
     <link rel="stylesheet" type="text/css" href="./css/fontStyles.css">
 
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
