--- a/info.html
+++ b/info.html
@@ -11,11 +11,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
+    <script type="text/javascript" src="/assets/js/cookies.js"></script>
+    <script type="text/javascript" src="assets/js/Cookie.js"></script>
     <title>Informações</title>
-
+  
 </head>
 
 <body>
+    
+   
     <div class="container">
 
 
@@ -125,6 +129,11 @@
 
 
     </div>
+    <script type="module"> /*Isto é para carregar só no fim (tem que ser)*/          
+    var docStyle = getComputedStyle(document.documentElement);
+   var navbar= document.getElementsByClassName("navbar");
+   navbar[0].style.backgroundColor=Cookie.get("color");
+    </script>
 </body>
 
 </html>
